# OOP_Project

./: .gitignore  CMakeLists.txt  PROJECT_SKELETON.md  README.md
docs/: DESIGN_PATTERNS.md  Integrated.mdj  Machine_MVC.mdj  UI_bridge.mdj  UML.mdj  UML_2.mdj  UML_main.mdj  UML_simple.mdj
src/: Machine.cpp  Machine.h  MachineController.h  MachineUI.cpp  MachineUI.h  main.cpp
src/bridge/: ConnectorSnap.h  FactoryStats.h  IEventObserver.h  MachineCmd.h  MachineSnap.h
src/core/: Connector.cpp  Connector.h  Conveyor.cpp  Conveyor.h  Factory.cpp  Factory.h  Machine.cpp  Machine.h  Pipeline.cpp  Pipeline.h  Product.cpp  Product.h  Scenario.cpp  Scenario.h  SimObject.h
src/core/machines/: Reactor.cpp  Reactor.h  Separator.cpp  Separator.h  SourceTank.cpp  SourceTank.h  TankTerminal.cpp  TankTerminal.h
src/ui/: EventLogUI.cpp  EventLogUI.h  FactoryFloorUI.cpp  FactoryFloorUI.h  InspectorUI.cpp  InspectorUI.h  RunControlManager.cpp  RunControlManager.h  SimControlUI.cpp  SimControlUI.h  StateStyle.h  StatisticsUI.cpp  StatisticsUI.h  UILayout.h  UIObject.h
